*SVN*

* Added partial layouts (see example in action_view/lib/partials.rb) [DHH]

* Allow you to set custom :conditions on resource routes.  [Rick]

* Fixed that file.content_type for uploaded files would include a trailing \r #9053 [bgreenlee]

* url_for now accepts a series of symbols representing the namespace of the record [Josh Knowles]

* Make :trailing_slash work with query parameters for url_for. Closes #4004 [nov]

* Make sure missing template exceptions actually say which template they were looking for.  Closes #8683 [dasil003]

* Fix errors with around_filters which do not yield, restore 1.1 behaviour with after filters. Closes #8891 [skaes]

  After filters will *no longer* be run if an around_filter fails to yield, users relying on
  this behaviour are advised to put the code in question after a yield statement in an around filter.
  

* Allow you to delete cookies with options. Closes #3685 [josh, Chris Wanstrath]

* Allow you to render views with periods in the name.  Closes #8076 [norbert]

  render :partial => 'show.html.erb'

* Improve capture helper documentation.  #8796 [kampers]

* Prefix nested resource named routes with their action name, e.g. new_group_user_path(@group) instead of group_new_user_path(@group). The old nested action named route is deprecated in Rails 1.2.4.  #8558 [David Chelimsky]

* Allow sweepers to be created solely for expiring after controller actions, not model changes [DHH]

* Added assigns method to ActionController::Caching::Sweeper to easily access instance variables on the controller [DHH]

* Give the legacy X-POST_DATA_FORMAT header greater precedence during params parsing for backward compatibility.  [Jeremy Kemper]

* Fixed that link_to with an href of # when using :method will not allow for click-through without JavaScript #7037 [stevenbristol/josh]

* Fixed that radio_button_tag should generate unique ids #3353 [BobSilva/rebecca/josh]
